[tool.poetry]
name = "fmda-scamper-compare"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.18.0"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
networkx = "^3.2.1"
tqdm = "^4.66.1"
nbformat = "^5.9.2"
ipywidgets = "^8.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
